# Graphzer

./: Dockerfile  Makefile  README.md  docker-compose.yml  install.sh  pyproject.toml
graphzer/: main.py
